# workspace

Myapp/: .prettierrc  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
Myapp/src/components/blog/: BlogPostCard.tsx  PostNavigation.tsx
Myapp/src/data/: mockPosts.ts
Myapp/src/layouts/: RootLayout.tsx
Myapp/src/pages/: BlogPage.tsx  BlogPostPage.tsx  GalleryPage.tsx  HomePage.tsx  IllustrationDetailPage.tsx  NotFoundPage.tsx
Myapp/src/router/: index.tsx
Myapp/src/types/: blog.ts
fastapi/: pyproject.toml
fastapi/api/: main.py
fastapi/api/routers/: done.py  task.py
fastapi/api/schemas/: task.py
